# swagger_server/swagger/swagger.yaml
@@ -79,8 +79,8 @@ paths:
           description: "Server cant process"
       x-swagger-router-controller: "controllers.object_controller"
 
-  /object/{mark}:
-    get:
+  /object/{type}:
+    post:
       tags:
       - "object"
       summary: "Return an image with special mark and id"
@@ -88,33 +88,32 @@ paths:
       produces:
       - "application/json"
       parameters:
-      - name: "id"
-        in: "query"
-        description: "Filter id option"
-        required: true
-        type: "integer"
-      - name: "mark"
+      - name: "type"
         in: "path"
         description: "Filter mark option"
-        required: false
+        required: true
         type: "string"
       - name: "Authorization"
         in: "header"
         required: true
         type: "string"
+      - in: "body"
+        name: "picture"
+        description: "Picture to process"
+        required: true
+        schema:
+          $ref: "#/definitions/Picture"
       responses:
         "200":
           description: "Success"
           schema:
-            type: "array"
-            items:
-              $ref: "#/definitions/ResultFilteredPicture"
+            $ref: "#/definitions/Picture"
         "400":
-          description: "Invalid mark"
+          description: "Invalid module"
         "401":
           description: "Unauthorized"
-        "404":
-          description: "Cant find id or mark"
+        "500":
+          description: "Server cant process"
       x-swagger-router-controller: "controllers.object_controller"
 
   /human:
